[SF#925,938] Improve file type detection, it fails in some cases such as DOCX.
For file types that have multiple entries in MIME database the function
g_content_type_guess() always returns "uncertain true" attribute, even if
both content and file name are passed to it. And if only content was passed
then it always returns "uncertain false" so previous logic fails for such
files.

The commit changes that logic to not rely on uncertain attribute but test
if adding content test changes type returned, and if does then return to
previous test type (content only), but if it doesn't then trust that value
ignoring uncertain attribute.

My testing shows good acceptable results on previously wrong types while
still giving right results on files with incorrect suffixes.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@
 
 * Corrected missing newline at end of generated shortcut desktop entry.
 
+* Improved file type detection, it failed in some cases such as DOCX.
+
 
 Changes on 1.2.3 since 1.2.2:
 
