Return back the workaround on thumbnailers which don't save Thumb::MTime.
That workaround was added by commit 38edf958a9dee85a2648ca4cb05f61a2d361fa93
but later reverted in commit c7a4c8539cc5496d60dc2d6b75d1d136d5ca383c and
that still may lead to thumbnail regenerations.

This commit reintroduces that change with additional check, that way it will
rewrite thumbnail only if it misses Thumb::MTime in it.

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,9 @@
 
 * Improved file type detection, it failed in some cases such as DOCX.
 
+* Returned back the workaround on thumbnailers which don't save any of
+    Thumb::MTime or Thumb::URI in the thumbnail.
+
 
 Changes on 1.2.3 since 1.2.2:
 
