[SF#921] Rewrite broken rubberband rendering in icon view for GTK3.
With GTK3 using GtkStyle doesn't always give correct results, therefore
the GtkStyleContext with GTK_STYLE_CLASS_RUBBERBAND should be used instead.

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@
 
 * Fixed crash in expand_exec_macros() on missing Exec line.
 
+* Rewritten broken rubberband rendering in icon view for GTK3.
+
 
 Changes on 1.2.3 since 1.2.2:
 
