Eliminate usage of GVolumeMonitor if no FmFolder object was created.
If libfm is used without FmFolder usage then there is no reason to run
the volume monitor. Therefore it should be activated when some folder
was opened and deactivated when all of them were closed.
This may be a culprit of external green drives been waked up (see the
http://sourceforge.net/p/lxde/bugs/751/ bugreport against lxpanel).

--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,8 @@
 
 * Rewritten broken rubberband rendering in icon view for GTK3.
 
+* Eliminated usage of GVolumeMonitor if no FmFolder object was created.
+
 
 Changes on 1.2.3 since 1.2.2:
 
