--- a/NEWS
+++ b/NEWS
@@ -38,6 +38,8 @@
     should be not "inode/x-shortcut" but "application/x-desktop" instead
     and therefore handled as any other applications, i.e. allow drop.
 
+* Added urxvtc data into the terminals.list file.
+
 
 Changes on 1.2.3 since 1.2.2:
 
