[SF#950] Fix adding user-defined MIME associations into mimeapps.list config.
Change in commit 3c629358f01914f71e2acd73c61174d91d456023 was incorrect,
workaround on GDesktopAppInfo caching should be implemented other way.

--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,8 @@
 
 * Added urxvtc data into the terminals.list file.
 
+* Fixed adding user-defined MIME associations into mimeapps.list config.
+
 
 Changes on 1.2.3 since 1.2.2:
 
