--- a/NEWS
+++ b/NEWS
@@ -38,13 +38,17 @@
     should be not "inode/x-shortcut" but "application/x-desktop" instead
     and therefore handled as any other applications, i.e. allow drop.
 
-* Added urxvtc data into the terminals.list file.
+* Added 'urxvtc' into the terminals database.
 
 * Fixed adding user-defined MIME associations into mimeapps.list config.
 
-* Fixed libfm-pref-apps work with GTK+ 3.10.
+* Few UI adaptations to work with GTK+ 3.10 or newer.
 
 * Fixed creating shortcuts on paths with basename started with '?'.
+
+* Fixed pointer-related issues with GTK+ 3.10 or newer.
+
+* Added 'terminology' into the terminals database.
 
 
 Changes on 1.2.3 since 1.2.2:
