--- a/NEWS
+++ b/NEWS
@@ -65,6 +65,8 @@
 
 * Fixed timer shown in progress dialog, it should show 01:00, not 00:60.
 
+* Fixed stuck tooltip after right-click on file in view, seen rarely.
+
 
 Changes on 1.2.3 since 1.2.2:
 
